Fix horizontal scrolling

--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@
 
 body{
     width: 100%;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 header{
